--- a/paper/content.tex
+++ b/paper/content.tex
@@ -871,7 +871,7 @@ which is smaller by a factor of about~360,000.
 %
 % ELA : someone please double-check these numbers :)
 
-\subsubsection{Equivalent support bound for symmetry-aware garbage collection}
+\subsection{Equivalent support bound for symmetry-aware garbage collection}
 
 Here, we present a bound that generalizes our permutation bound~\eqref{eq:permutation},
 which can be viewed as special case.
@@ -888,7 +888,7 @@ compared to the analogous extension of~$\cal Q$.
 By reasoning analogous to the special case of permutations~(\S\ref{sec:permutation}),
 we only ever have to keep the prefix with the better objective.
 
-\subsubsection{Bound on differences between similar prefixes}
+\subsection{Bound on differences between similar prefixes}
 
 We now present a slight relaxation of our equivalent support bound.
 %
@@ -925,6 +925,132 @@ where~$\Obj^*$ is the best known objective, since the left had expression
 provides a lower bound on~$\Obj(\cal{Q}^*)$.
 
 % ELA would like to generalize this to any two prefixes that capture similar data
+
+
+\subsection{Lower bound on rule similarity to a default rule}
+
+Let~$\RL$ be a rule list with prefix~$\Prefix$, default rule~$d$, and objective~$\Obj(\RL)$.
+%
+Let~$\RL'$ be a rule list with prefix~$\Prefix'$ that starts with~$\Prefix$ and adds one rule~$A$.
+%
+If, in the context of~$\RL'$, rule~$A$ captures all remaining data not captured by~$\Prefix$,
+then rule~$A$ behaves like~$\RL$'s default rule~$d$ while incurring a penalty of~$c$,
+\ie ~${\Obj(\RL', \x, \y) = \Obj(\RL, \x, \y) + c}$.
+
+More generally, suppose rule~$A$ captures all data in the support of~$d$
+except for a fraction~${f < c}$.
+%
+Then, the best outcome for~$\RL'$ would be if it could correctly classify
+the entire majority class with respect to the support of~$d$,
+plus a fraction~$f$ of data belonging to the minority class.
+%
+This would yield a reduction in misclassification of a fraction~${f < c}$
+of data while incurring a penalty of~$c$, yielding
+${\Obj(\RL', \x, \y) \ge \Obj(\RL, \x, \y)}$.
+%
+Furthermore, we would never extend~$\RL'$ with additional rules,
+since insufficient data remain to be captured~\eqref{eq:min-capture}.
+%
+Thus, we require
+\begin{align}
+s(\RL'_A) \le s(\RL_d) - c,
+\label{eq:max-capture}
+\end{align}
+where~$s(\RL'_A)$ is the normalized support of~$A$ in~$\RL'$,
+$s(\RL_d)$ is the normalized support of~$d$ in~$\RL$,
+and~$c$ is the regularization parameter.
+
+\subsection{Insufficient per-rule support due to rule dominance}
+
+Let us say that rule~$A$ dominates rule~$B$ if the data captured by~$B$ is a subset of the data captured by~$A$.
+%
+Rule~$B$ should never follow rule~$A$ in a rule list because it will never capture additional data;
+this scenario is a special case where~\eqref{eq:min-capture} immediately applies.
+%
+More precisely, if~$\RL$ is a rule list that contains rule~$A$ and doesn't contain rule~$B$,
+and~$\RL'$ is derived from~$\RL$ by inserting rule~$B$ anywhere after~$A$, then
+\begin{align}
+\Obj(\RL', \x, \y) = \Obj(\RL, \x, \y) + c \ge \Obj(\RL, \x, \y).
+\end{align}
+By considering rule semantics, it is easy to think of common situations
+leading to dominance relationships between rules.
+%
+For example, if rule~$A$'s antecedent is~${(x_1 = 0)}$ and rule~$B$'s
+antecedent is~${(x_1 = 0) \wedge (x_2 = 1)}$, then rule~$A$ dominates rule~$B$.
+%
+%Similar to symmetry-aware pruning, we achieve this by restricting how we grow a prefix, as informed by a hash map rdict that maps a rule R_i to a set of rules T_i = {R_k} such that R_i dominates every R_k in T_i. When growing a prefix that ends with rule R_i, we only append a rule R_k if it is not in T_i. Notice that the intersection of S_i and T_i is the empty set, thus the mappings represented by cdict and rdict can easily be combined into a single mapping.
+
+\subsection{Propagation of rejected rules}
+
+Suppose we grow a rule list~$\RL$ by appending rule~$A$ not already in the rule list,
+\ie by adding an antecedent to its prefix~$\Prefix$; call this new rule list~$\RL'$.
+%
+If in the context of~$\RL'$ rule~$A$ has insufficient accurate support~\eqref{eq:min-capture-correct},
+insufficient support~\eqref{eq:min-capture},
+or captures too many data compared to the original default rule~\eqref{eq:max-capture},
+then we say that rule list~$\RL$~\emph{rejects} rule~$A$.
+
+We now describe a large class of rule lists related to~$\RL$ that also reject rule~$A$:
+if~$\RL'$ is \emph{any} rule list containing rules whose antecedents include,
+in any order, the antecedents in~$\Prefix$, then~$\RL'$ also rejects rule~$A$.
+%
+Furthermore,~$\RL'$ rejects~$A$ for the same reason that~$\RL$ rejects~$A$.
+%
+For example, suppose that when we add rule~$A$ to rule list~$\RL$,
+it has insufficient support~\eqref{eq:min-capture}: ${s(\RL_A) \le c}$,
+where~$s(\RL_A)$ is the normalized support of~$A$ in the context of~$\RL$.
+%
+In the context of~$\RL'$, the prefix preceding~$A$ captures at least
+as much data as the prefix of~$\RL$, thus
+\begin{align}
+s(\RL'_A) \le s(\RL_A) \le c,
+\end{align}
+where~$s(\RL'_A)$ is the normalized support of rule~$A$ in~$\RL'$.
+
+As another example, consider a rule list~$\RL'$ derived from~$\RL$ that holds rule~$A$ fixed
+but permutes any of the other (earlier) antecedents given by those in~$\Prefix$.
+%
+The permutation of~$\Prefix$ captures the same data as~$\Prefix$,
+therefore rule~$A$ behaves the same in both contexts,
+and in particular captures and correctly classifies the same data.
+%
+Another rule list~$\RL''$, derived from~$\RL'$ by inserting additional rules anywhere,
+maintains the invariant that rule~$A$ appears after rules with antecedents in~$\Prefix$;
+it can capture and correctly classify at most as much data as rule~$A$ in rule list~$\RL'$.
+%
+%A rule is rejected by a prefix if it doesn't correctly capture enough data (it must correctly capture >= c * ndata). Let Q be P's parent. If Q rejects a rule, then P will also reject that rule. This 'inheritance' of rejected rules only depends on which data are captured by Q, and doesn't actually depend on the order of rules in Q. Let S be the set of rules formed from (K-1) rules of P, in any order. P inherits rejected rules from any elements of S. Because of our symmetry-based garbage collection of prefixes equivalent up to a permutation, there are at most K elements of S in the cache; we can identify these via the inverse canonical map (ICM) that maps an ordered prefix to its permutation in the cache. We thus lazily initialize the list of P's reject list of rejected rules.
+
+\subsection{Equivalence of rule lists when rules commute}
+
+If two rules~$A$ and~$B$ capture disjoint subsets of data,
+then they commute globally in the sense that any rule list where~$A$ and~$B$ are
+adjacent is equivalent to another rule list where~$A$ and~$B$ swap positions.
+%
+More generally, a rule list containing possibly multiple, possibly overlapping
+pairs of commuting rules is equivalent to any other rule list that can be generated
+by swapping one or more such pairs of rules.
+%
+We can avoid evaluating multiple such equivalent rule lists by eliminating all but one.
+%
+%We achieve this by restricting how we grow a prefix (by appending a rule), as informed by a hash map cdict that maps each rule R_i to a set of rules S_i = {R_j} such that R_i commutes with every R_j in S_i and j > i. When growing a prefix that ends with rule R_i, we only append a rule R_j if it is not in S_i.
+
+\begin{itemize}
+\item other permutation bounds
+\item not-too-many incorrect bound:  ELA doesn't remember this one
+\end{itemize}
+
+%For any prefix P, we can write down a lower bound on its permutations' objectives.  (I'm not talking about longer prefixes, just permutations of the same length, call it L.)   An easy bound comes from assuming that there is a permutation that makes no mistakes on captured data, so the only contributions to the objective come from the mistakes of the default rule (call this m) and c*L.  All the permutations capture the same data, so m is constant and this gives
+
+%min objective( any permutation of P ) >= m/n + c*L
+
+%Actually we can make this tighter if we know lower bound information from permutations of sub-prefixes.  For example, the length (L-1) "sub-prefixes" of P generate L permutation groups.  We can add the minimum number of mistakes (on captured data) made by prefixes over all of these groups to our bound, call this k
+
+%min objective( any permutation of P ) >= k/n + m/n + c*L
+
+%We only know k if we've already evaluated the length (L-1) permutations -- we do know it in the breadth-first setting.  (This idea could be generalized to shorter sub-prefixes if desired, e.g., for policies other than breadth first.)
+
+
+\section{Implementation architecture}
 
 \subsection{Cache data structure}
 \label{sec:cache}
@@ -1013,130 +1139,6 @@ University of California, Berkeley.
 \bibliography{refs}
 \bibliographystyle{abbrvnat}
 
-\begin{appendix}
-
-\subsubsection{Lower bound on rule similarity to a default rule}
-
-Let~$\RL$ be a rule list with prefix~$\Prefix$, default rule~$d$, and objective~$\Obj(\RL)$.
-%
-Let~$\RL'$ be a rule list with prefix~$\Prefix'$ that starts with~$\Prefix$ and adds one rule~$A$.
-%
-If, in the context of~$\RL'$, rule~$A$ captures all remaining data not captured by~$\Prefix$,
-then rule~$A$ behaves like~$\RL$'s default rule~$d$ while incurring a penalty of~$c$,
-\ie ~${\Obj(\RL', \x, \y) = \Obj(\RL, \x, \y) + c}$.
-
-More generally, suppose rule~$A$ captures all data in the support of~$d$
-except for a fraction~${f < c}$.
-%
-Then, the best outcome for~$\RL'$ would be if it could correctly classify
-the entire majority class with respect to the support of~$d$,
-plus a fraction~$f$ of data belonging to the minority class.
-%
-This would yield a reduction in misclassification of a fraction~${f < c}$
-of data while incurring a penalty of~$c$, yielding
-${\Obj(\RL', \x, \y) \ge \Obj(\RL, \x, \y)}$.
-%
-Furthermore, we would never extend~$\RL'$ with additional rules,
-since insufficient data remain to be captured~\eqref{eq:min-capture}.
-%
-Thus, we require
-\begin{align}
-s(\RL'_A) \le s(\RL_d) - c,
-\label{eq:max-capture}
-\end{align}
-where~$s(\RL'_A)$ is the normalized support of~$A$ in~$\RL'$,
-$s(\RL_d)$ is the normalized support of~$d$ in~$\RL$,
-and~$c$ is the regularization parameter.
-
-\subsubsection{Insufficient per-rule support due to rule dominance}
-
-Let us say that rule~$A$ dominates rule~$B$ if the data captured by~$B$ is a subset of the data captured by~$A$.
-%
-Rule~$B$ should never follow rule~$A$ in a rule list because it will never capture additional data;
-this scenario is a special case where~\eqref{eq:min-capture} immediately applies.
-%
-More precisely, if~$\RL$ is a rule list that contains rule~$A$ and doesn't contain rule~$B$,
-and~$\RL'$ is derived from~$\RL$ by inserting rule~$B$ anywhere after~$A$, then
-\begin{align}
-\Obj(\RL', \x, \y) = \Obj(\RL, \x, \y) + c \ge \Obj(\RL, \x, \y).
-\end{align}
-By considering rule semantics, it is easy to think of common situations
-leading to dominance relationships between rules.
-%
-For example, if rule~$A$'s antecedent is~${(x_1 = 0)}$ and rule~$B$'s
-antecedent is~${(x_1 = 0) \wedge (x_2 = 1)}$, then rule~$A$ dominates rule~$B$.
-%
-%Similar to symmetry-aware pruning, we achieve this by restricting how we grow a prefix, as informed by a hash map rdict that maps a rule R_i to a set of rules T_i = {R_k} such that R_i dominates every R_k in T_i. When growing a prefix that ends with rule R_i, we only append a rule R_k if it is not in T_i. Notice that the intersection of S_i and T_i is the empty set, thus the mappings represented by cdict and rdict can easily be combined into a single mapping.
-
-\subsubsection{Propagation of rejected rules}
-
-Suppose we grow a rule list~$\RL$ by appending rule~$A$ not already in the rule list,
-\ie by adding an antecedent to its prefix~$\Prefix$; call this new rule list~$\RL'$.
-%
-If in the context of~$\RL'$ rule~$A$ has insufficient accurate support~\eqref{eq:min-capture-correct},
-insufficient support~\eqref{eq:min-capture},
-or captures too many data compared to the original default rule~\eqref{eq:max-capture},
-then we say that rule list~$\RL$~\emph{rejects} rule~$A$.
-
-We now describe a large class of rule lists related to~$\RL$ that also reject rule~$A$:
-if~$\RL'$ is \emph{any} rule list containing rules whose antecedents include,
-in any order, the antecedents in~$\Prefix$, then~$\RL'$ also rejects rule~$A$.
-%
-Furthermore,~$\RL'$ rejects~$A$ for the same reason that~$\RL$ rejects~$A$.
-%
-For example, suppose that when we add rule~$A$ to rule list~$\RL$,
-it has insufficient support~\eqref{eq:min-capture}: ${s(\RL_A) \le c}$,
-where~$s(\RL_A)$ is the normalized support of~$A$ in the context of~$\RL$.
-%
-In the context of~$\RL'$, the prefix preceding~$A$ captures at least
-as much data as the prefix of~$\RL$, thus
-\begin{align}
-s(\RL'_A) \le s(\RL_A) \le c,
-\end{align}
-where~$s(\RL'_A)$ is the normalized support of rule~$A$ in~$\RL'$.
-
-As another example, consider a rule list~$\RL'$ derived from~$\RL$ that holds rule~$A$ fixed
-but permutes any of the other (earlier) antecedents given by those in~$\Prefix$.
-%
-The permutation of~$\Prefix$ captures the same data as~$\Prefix$,
-therefore rule~$A$ behaves the same in both contexts,
-and in particular captures and correctly classifies the same data.
-%
-Another rule list~$\RL''$, derived from~$\RL'$ by inserting additional rules anywhere,
-maintains the invariant that rule~$A$ appears after rules with antecedents in~$\Prefix$;
-it can capture and correctly classify at most as much data as rule~$A$ in rule list~$\RL'$.
-%
-%A rule is rejected by a prefix if it doesn't correctly capture enough data (it must correctly capture >= c * ndata). Let Q be P's parent. If Q rejects a rule, then P will also reject that rule. This 'inheritance' of rejected rules only depends on which data are captured by Q, and doesn't actually depend on the order of rules in Q. Let S be the set of rules formed from (K-1) rules of P, in any order. P inherits rejected rules from any elements of S. Because of our symmetry-based garbage collection of prefixes equivalent up to a permutation, there are at most K elements of S in the cache; we can identify these via the inverse canonical map (ICM) that maps an ordered prefix to its permutation in the cache. We thus lazily initialize the list of P's reject list of rejected rules.
-
-\subsubsection{Equivalence of rule lists when rules commute}
-
-If two rules~$A$ and~$B$ capture disjoint subsets of data,
-then they commute globally in the sense that any rule list where~$A$ and~$B$ are
-adjacent is equivalent to another rule list where~$A$ and~$B$ swap positions.
-%
-More generally, a rule list containing possibly multiple, possibly overlapping
-pairs of commuting rules is equivalent to any other rule list that can be generated
-by swapping one or more such pairs of rules.
-%
-We can avoid evaluating multiple such equivalent rule lists by eliminating all but one.
-%
-%We achieve this by restricting how we grow a prefix (by appending a rule), as informed by a hash map cdict that maps each rule R_i to a set of rules S_i = {R_j} such that R_i commutes with every R_j in S_i and j > i. When growing a prefix that ends with rule R_i, we only append a rule R_j if it is not in S_i.
-
-\begin{itemize}
-\item other permutation bounds
-\item not-too-many incorrect bound:  ELA doesn't remember this one
-\end{itemize}
-
-%For any prefix P, we can write down a lower bound on its permutations' objectives.  (I'm not talking about longer prefixes, just permutations of the same length, call it L.)   An easy bound comes from assuming that there is a permutation that makes no mistakes on captured data, so the only contributions to the objective come from the mistakes of the default rule (call this m) and c*L.  All the permutations capture the same data, so m is constant and this gives
-
-%min objective( any permutation of P ) >= m/n + c*L
-
-%Actually we can make this tighter if we know lower bound information from permutations of sub-prefixes.  For example, the length (L-1) "sub-prefixes" of P generate L permutation groups.  We can add the minimum number of mistakes (on captured data) made by prefixes over all of these groups to our bound, call this k
-
-%min objective( any permutation of P ) >= k/n + m/n + c*L
-
-%We only know k if we've already evaluated the length (L-1) permutations -- we do know it in the breadth-first setting.  (This idea could be generalized to shorter sub-prefixes if desired, e.g., for policies other than breadth first.)
-
 \newpage
 
 \begin{figure}[t!]
@@ -1211,5 +1213,3 @@ with horizontal lines and x-ticks for CART and C4.5}
 maybe also add the best prefix length over time}
 \label{fig:max-length}
 \end{figure}
-
-\end{appendix}
