--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -25,6 +25,7 @@
 \newcommand{\y}{\mathbf{y}}
 \def\RL{{d}}
 \def\Prefix{d_p}
+\def\tPrefix{\tilde{d}_p}
 \def\Labels{\delta_p}
 \def\Default{q_0}
 \def\Obj{R}
