--- a/paper/content.tex
+++ b/paper/content.tex
@@ -755,36 +755,47 @@ starting with any prefix in~$P$.
 
 \begin{theorem}[Permutation bound]
 \label{thm:permutation}
-Let~$\RL$ and~$\tilde \RL$ be two rule lists
-whose prefixes~$\Prefix$ and~$\tPrefix$, respectively,
+Let~$\RL$ and~$\tilde \RL$ be rule lists
+whose prefixes~$\Prefix$ and~$\tilde\Prefix$, respectively,
 are equivalent up to a permutation of their antecedents.
 %
-Let~$T(\Prefix)$ denote the set of all rule lists whose
-prefixes start with~$\Prefix$.
-%
+Also define~$T(\Prefix)$ to be the set of all rule lists whose
+prefixes start with~$\Prefix$:
+\begin{align}
+T(\Prefix) =
+\{(\Prefix', \Labels', q'_0, K') : \Prefix' \textnormal{ starts with } \Prefix \}.
+\end{align}
 If the objectives of~$\RL$ and~$\tilde \RL$ are related by
 ${\Obj(\RL, \x, \y) \le \Obj(\tilde \RL, \x, \y)}$,
-then the objective of the optimal rule list whose prefix
-starts with~$\RL$ gives a lower bound on the objective of
-the optimal rule list whose prefix starts with~$\tilde \RL$:
+then the objective of the optimal rule list in~$T(\Prefix)$ gives a
+lower bound on the objective of the optimal rule list in~$\tilde \RL$:
 \begin{align}
-\min_{\RL' : \Prefix' \textnormal{ starts with } \Prefix}
-\Obj(\RL', \x, \y)
-\le \min_{\tilde \RL' : \tPrefix' \textnormal{ starts with } \tPrefix}
-\Obj(\tilde \RL', \x, \y)
+\min_{\RL' \in T(\Prefix)} \Obj(\RL', \x, \y)
+\le \min_{\tilde \RL' \in T(\tPrefix)} \Obj(\tilde \RL', \x, \y)
 \label{eq:permutation}
 \end{align}
 \end{theorem}
 
 \begin{proof}
-Since $\Prefix$ and~$\tPrefix$ have the same antecedents,
-they also capture the same data, \ie
-\begin{align}
-\{x_n : \Cap(x_n, \Prefix)\} = \{x_n : \Cap(x_n, \tilde \Prefix)\}.
-\end{align}
-Their two corresponding rule lists need not yield the same objective, since the
-loss function~\eqref{eq:objective} depends on rule order.
+Let~$\pi$ define a permutation of ${\{1, \dots, K\}}$.
 %
+Let ${\RL = (\Prefix, \Labels, q_0, K)}$
+and ${\tilde\RL = (\tilde\Prefix, \tilde\Labels, \tilde{q}_0, K)}$
+be rule lists such that ${\Prefix = (p_1, \dots, p_K)}$
+and ${\tilde\Prefix = (p_{\pi(1)}, \dots, p_{\pi(K)})}$.
+%
+Since~$\Prefix$ and~$\tilde\Prefix$ contain the same antecedents,
+they both capture the same data,
+\begin{align}
+\{x_n : \Cap(x_n, \Prefix)\} = \{x_n : \Cap(x_n, \tilde \Prefix)\},
+\end{align}
+and also have the same default rule, thus ${q_0 = \tilde{q}_0}$.
+
+In general, ${\Obj(\RL, \x, \y) \neq \Obj(\tilde\RL, \x, \y)}$,
+since the objective function depends on rule order.
+%
+Let
+
 Obtain a prefix~$\cal{P}'$ by appending~$\cal{P}$ with some ordered list of
 unique antecedents not contained in~$\cal{P}$, and~$\cal{Q}'$ by appending~$\cal{Q}$
 with the same ordered list.
