--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -25,9 +25,12 @@
 \newcommand{\y}{\mathbf{y}}
 \def\RL{{d}}
 \def\Prefix{d_p}
-\def\tPrefix{\tilde{d}_p}
 \def\Labels{\delta_p}
 \def\Default{q_0}
+\def\RLB{{D}}
+\def\PrefixB{D_p}
+\def\LabelsB{\Delta_p}
+\def\DefaultB{Q_0}
 \def\Obj{R}
 \def\Loss{\ell}
 \def\Reg{{\lambda}}
@@ -43,6 +46,7 @@
 \def\OptimalRL{d^*}
 \def\Remaining{\Gamma}
 \def\TotalRemaining{{\Gamma_{\textnormal{tot}}}}
+\def\StartsWith{\sigma}
 \def\Queue{Q}
 \DeclareMathOperator*{\argmin}{argmin}
 \DeclareMathOperator*{\argmax}{argmax}
